Added logging with spdlog library

--- a/Jungle/Jungle.vcxproj
+++ b/Jungle/Jungle.vcxproj
@@ -60,6 +60,7 @@
       <PreprocessorDefinitions>JNGL_PLATFORM_WINDOWS;JNGL_BUILD_DLL;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)Jungle\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -75,6 +76,7 @@
       <PreprocessorDefinitions>JNGL_PLATFORM_WINDOWS;JNGL_BUILD_DLL;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)Jungle\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -84,12 +86,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Jungle\Log.h" />
     <ClInclude Include="src\Jungle\App.h" />
     <ClInclude Include="src\Jungle\Core.h" />
     <ClInclude Include="src\Jungle.h" />
     <ClInclude Include="src\Jungle\EntryPoint.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Jungle\Log.cpp" />
     <ClCompile Include="src\Jungle\App.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
