Added graphics context

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,28 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1198,96
-Size=550,685
+ViewportPos=1127,402
+ViewportId=0xE927CF2F
+Size=499,1000
 Collapsed=0
 
 [Window][Example: Log]
-Pos=730,206
-Size=500,400
+Pos=249,19
+Size=250,1070
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpace Demo]
+Size=2048,1089
+Collapsed=0
+
+[Window][Test]
+Pos=573,277
+Size=149,48
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=0,42 Size=2048,1070 Split=X
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=499,1061
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1419,1061 CentralNode=1
 
