--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1127,402
+ViewportPos=2146,130
 ViewportId=0xE927CF2F
-Size=499,1000
+Size=499,1061
 Collapsed=0
 
 [Window][Example: Log]
@@ -16,16 +16,16 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Size=2048,1089
+Size=1920,1080
 Collapsed=0
 
 [Window][Test]
-Pos=573,277
+Pos=119,91
 Size=149,48
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=0,42 Size=2048,1070 Split=X
+DockSpace   ID=0x3BC79352 Pos=112,83 Size=1920,1061 Split=X HiddenTabBar=1
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=499,1061
   DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1419,1061 CentralNode=1
 
