Added refs and texture

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -24,6 +24,11 @@ Pos=119,91
 Size=149,48
 Collapsed=0
 
+[Window][Settings]
+Pos=60,60
+Size=311,67
+Collapsed=0
+
 [Docking][Data]
 DockSpace   ID=0x3BC79352 Pos=112,83 Size=1920,1061 Split=X HiddenTabBar=1
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=499,1061
