--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,11 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=285,171
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1392,9
-Size=499,1061
+ViewportPos=1528,20
+ViewportId=0xE927CF2F
+Size=499,1058
 Collapsed=0
 
 [Window][Example: Log]
@@ -24,7 +25,7 @@ Size=149,48
 Collapsed=0
 
 [Window][Settings]
-Pos=60,60
+Pos=285,171
 Size=311,67
 Collapsed=0
 
