--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -25,8 +25,9 @@ Size=149,48
 Collapsed=0
 
 [Window][Settings]
-Pos=954,639
-Size=311,67
+ViewportPos=1637,356
+ViewportId=0x1C33C293
+Size=374,201
 Collapsed=0
 
 [Docking][Data]
