--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,6 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=612,508
-ViewportId=0x9F5F46A1
+Pos=370,243
 Size=400,400
 Collapsed=0
 
@@ -26,7 +25,7 @@ Size=149,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1637,356
+ViewportPos=1853,572
 ViewportId=0x1C33C293
 Size=374,201
 Collapsed=0
