--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -16,7 +16,8 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Size=1920,1080
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Window][Test]
@@ -25,13 +26,13 @@ Size=149,48
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1632,385
-ViewportId=0x1C33C293
-Size=374,201
+Pos=0,19
+Size=1280,701
 Collapsed=0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=112,83 Size=1920,1061 Split=X HiddenTabBar=1
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X HiddenTabBar=1
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=499,1061
-  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1419,1061 CentralNode=1
+  DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1419,1061 CentralNode=1 Selected=0x54723243
 
