--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -16,7 +16,6 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -26,13 +25,13 @@ Size=149,48
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=1280,701
+ViewportPos=1579,391
+ViewportId=0x1C33C293
+Size=371,157
 Collapsed=0
-DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X HiddenTabBar=1
+DockSpace   ID=0x3BC79352 Pos=242,284 Size=1280,701 Split=X HiddenTabBar=1
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=499,1061
   DockNode  ID=0x00000004 Parent=0x3BC79352 SizeRef=1419,1061 CentralNode=1 Selected=0x54723243
 
